# sometask

./: flake.nix  pyproject.toml  readme.md
src/: main.py
